# cloud2mask

./: CMakeLists.txt  README.md  package.xml
launch/: cloud2mask.launch  rect2mask.launch  sample_cloud2mask.launch
script/: cloud_to_mask.py
scripts/: cloud_to_mask.py  expand_mask.py  image_placeholder.py  rect_to_mask.py
