<?xml version="1.0"?>
<package format="2">
  <name>mask_utils</name>
  <version>0.0.0</version>
  <description>The mask_utils package</description>

  <maintainer email="takeuchi@jsk.imi.i.u-tokyo.ac.jp">kosuke</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <export>
  </export>
</package>
